--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,18 +1,3 @@
-/** { 
-margin: 0;
-}*/
-
-
-/*.slider {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100vh;
-	background: linear-gradient(to left, #575554, black );
-	z-index: -1;
-}
-*/
 nav {
 	display: grid;
 	min-height: 10vh;
@@ -22,14 +7,6 @@ nav {
 a.nav-link {
 	color:white;
 }
-/*
-section {
-	display: flex;
-	height: 100vh;
-	justify-content: center;
-	align-items: center;
-}
-*/
 
 
 p {
@@ -42,13 +19,6 @@ h2 {
 	text-align: center;
 }
 
-/*.photo-expo {
-	width: 300px;
-	height: auto;
-	border-style: solid;
-	border-color: black;
-	border-width: 1px;
-}*/
 
 .card-body {
 
@@ -58,13 +28,6 @@ h2 {
 .card-title {
 	font-size: 20px;
 }
-
-
-.photo {
-	height: 100px;
-	width: auto;
-}
-
 
 
 .center {
@@ -138,6 +101,12 @@ h2 {
 
  /*          RESPONSIVE GALERY              */
 
+
+.menu-name {
+  color: black;
+  text-align: center; 
+}
+
  .container-fluid2 {
  	box-sizing: border-box;
 
@@ -151,14 +120,14 @@ h2 {
 
 .column-flex {
   flex: 25%;
-  max-width: 100%;
+  max-width: 25%;
   padding: 0 4px;
-  flex-shrink: 8;
+  flex-shrink: 1;
 
 }
 
 .column-flex img {
-  margin-top: 8px;
+  margin-bottom: 8px;
   vertical-align: middle;
 }
 
@@ -206,16 +175,17 @@ h2 {
 /* The Modal (background) */
 .modal {
   display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
+  /*position: relative;*/ /* Stay in place */
   z-index: 1; /* Sit on top */
   padding-top: 100px; /* Location of the box */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
+  overflow-y: scroll !important; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+  background-color: rgba(0,0,0,0.23); /* Black w/ opacity */
+
 }
 
 /* Modal Content (Image) */
@@ -224,7 +194,18 @@ h2 {
   display: block;
   width: 80%;
   max-width: 700px;
+  border-style: solid !important;
+  border-width: 15px !important;
+  border-color: white !important;
+  border-radius: 7px !important;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: absolute;
 }
+
+
 
 /* Caption of Modal Image (Image Text) - Same Width as the Image */
 #caption {
@@ -251,10 +232,10 @@ h2 {
 
 /* The Close Button */
 .close {
-  position: absolute;
+  position: fixed;
   top: 15px;
   right: 35px;
-  color: #f1f1f1;
+  color: white !important;
   font-size: 40px;
   font-weight: bold;
   transition: 0.3s;
@@ -273,18 +254,6 @@ h2 {
   }
 }
 
-/*.centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}*/
-/*.container-test {
-  position: relative;
-  text-align: center;
-  color: white;
-} 
-*/
 
 /* FOOTER */
 
@@ -299,12 +268,18 @@ body {
 }
 
 .footer {
+  color: black;
+  display: grid;
   position: absolute;
   bottom: 0;
   /* Set the fixed height of the footer here */
   height: 60px;
   width: 100%;
-  background-color: red;
+  background-color: #D6D6D6;
+}
+
+.bottom-footer {
+  background-color: #D6D6D6;
 }
 
 .margin-footer{
