--- a/app/views/admins/catalogues/new.html.erb
+++ b/app/views/admins/catalogues/new.html.erb
@@ -7,7 +7,7 @@
                 <%= form_tag url_for(action: 'create'), method: "post", class: "mt-4" do %>  
                     <p class="text-center mb-5"><%= text_field_tag 'name', @catalogue.name, class: "form-control", placeholder: "titre" %></p>
                     <p class="text-center"><%= text_field_tag 'description', @catalogue.description, placeholder: "description" , class: "form-control" %></p>
-                    <%= submit_tag "Créer le nouveau catalogue", class: "btn btn-primary mb-3 mt-3" %>
+                    <%= submit_tag "Créer le nouveau catalogue", class: "btn btn-primary mb-3 mt-3 form-control" %>
                 <% end %>
             </div>
         </div>
