--- a/app/views/admins/catalogues/show.html.erb
+++ b/app/views/admins/catalogues/show.html.erb
@@ -1,8 +1,5 @@
-<section>
-
-	LALALLALA CATALOGUE
-<div class="container-fluid">
-	<h3 class="text-center mt-5 mb-5">Ajout de photo ?</h3>
+<div class="container-fluid mx-auto margin-footer">
+	<h3 class="text-center mt-5 mb-5">Gestion de catalogue</h3>
 	<div class="row">
 		<div class="col col-9">
 			
@@ -26,9 +23,8 @@
 		<% @catalogue.pictures.each do |picture| %>
 			<div class="col-2 mt-5 ml-5 mr-5">
 				<%= image_tag((picture),  class:"mt-2 ml-2 fit") %>
-				<%= link_to "X", catalogue_delete_image_attachment_path(@catalogue.id, picture.id), method: "delete" %>
+				<%= link_to "X", catalogue_delete_image_attachment_path(@catalogue.id, picture.id), method: "delete", data: {confirm: "are you sure ?"} %>
 			</div>
 		<% end %>
  	</div>
 </div>
-</section>
