--- a/app/views/catalogues/index.html.erb
+++ b/app/views/catalogues/index.html.erb
@@ -36,7 +36,7 @@
                                                 <span class="close">&times;</span>
 
                                         <!-- Modal Content (The Image) -->
-                                                <img class="modal-content" id="" style="width: 100% height: 100%; overflow-y: scroll;">
+                                                <img class="modal-content" id="" >
 
                                         <!-- Modal Caption (Image Text) -->
                                                 <div class="captions" id=""></div>
