--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,18 +1,14 @@
-<section>  
-  <h1 class="text-center mt-5 mb-5"> Créer une nouvelle catégorie </h1>
-
-  <div class="container">
-  	<div class="row align-items-center">
-  		<div class="col col-4 text-center mx-auto">
-
-   <%= form_tag url_for(action: 'create'), method: "post", class: "mt-4" do %>
-
-                
-                  <p class="text-center mb-5"><%= text_field_tag 'name', @category.name, class: "form-control", placeholder: "titre" %></p>
-                  <p class="text-center"><%= text_field_tag 'description', @category.description, placeholder: "description" , class: "form-control" %></p>
-                    <%= submit_tag "Créer la nouvelle catégorie", class: "btn btn-primary mb-3 mt-3" %>
-                  <% end %>
-              </div>
-          </div>
-  	</div>
-</section>
+<div class="container-fluid margin-footer">
+    <h1 class="text-center mt-5 mb-5"> Créer une nouvelle catégorie </h1>
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col col-4 text-center mx-auto">
+                <%= form_tag url_for(action: 'create'), method: "post", class: "mt-4" do %>
+                    <p class="text-center mb-5"><%= text_field_tag 'name', @category.name, class: "form-control", placeholder: "titre" %></p>
+                    <p class="text-center"><%= text_field_tag 'description', @category.description, placeholder: "description" , class: "form-control" %></p>
+                    <%= submit_tag "Créer la nouvelle catégorie", class: "btn btn-primary mb-3 mt-3 form-control" %>
+                <% end %>
+            </div>
+        </div>
+    </div>
+</div>
