--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,27 +1,28 @@
 <!-- Footer -->
-	
-		<footer class="footer mt-5">
-			<div class="container-fluid">
-				<div class="row pt-4">
-					<div class="col col-4 text-dark"> 
 
-					</div>
-					<div class="col col-4 text-dark text-center">
-						<i class="fab fa-twitter-square"></i>
-						<i class="fab fa-facebook ml-2"></i>
-						<i class="fab fa-instagram ml-2"></i>
-						<i class="fab fa-pinterest-square ml-2"></i>
-					</div>
-					<div class="col col-4 text-right pr-5">
-					</div>
-				</div>
+<footer class="footer mt-5">
+	<div class="container-fluid mb-2">
+		<div class="row mt-2">
+			<div class="col col-4 text-dark"> 
 			</div>
-			<div class="container-fluid mt-5 pb-3">
-				<div class="row" style="border-top: 1px solid #7C978A;">    
-					<div class="col col-12 text-center info"> Noemieblumet@gmail.com</div>
-					<div class="col col-12 text-center info"> 06.49.51.51.90 </div>
-				</div>
+			<div class="col col-4 text-dark text-center">
+				<i class="fab fa-twitter-square"></i>
+				<i class="fab fa-facebook ml-2"></i>
+				<i class="fab fa-instagram ml-2"></i>
+				<i class="fab fa-pinterest-square ml-2"></i>
 			</div>
-
-
-		</footer>
+			<div class="col col-4 text-right pr-5">
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid">
+		<div class="row bottom-footer " style="border-top: 1px solid #7C978A;">
+			<div class="col col-12 "> 
+				<p class="text-center ">Noemieblumet@gmail.com</p>
+			</div>
+			<div class="col col-12 text-center">
+				<p class="text-center">06.49.51.51.90</p>
+			</div>
+		</div>
+	</div>
+</footer>
