--- a/app/views/admins/articles/index.html.erb
+++ b/app/views/admins/articles/index.html.erb
@@ -1,7 +1,8 @@
+<%= render 'admins/dashboard' %>
 <div class=" container-fluid margin-footer">
 	<div class="row">
 		<div class="col ml-5">
-			<%= link_to '+', new_admins_article_path, style:"font-size:50px;" %>
+			<%= link_to '+', new_admins_article_path, style:"font-size:30px;", class:"btn btn-primary mb-5" %>
 		</div>
 	</div>
 
