--- a/app/views/admins/catalogues/index.html.erb
+++ b/app/views/admins/catalogues/index.html.erb
@@ -1,3 +1,4 @@
+<%= render 'admins/dashboard' %>
 <div class="container margin-footer mt-5 ">
 		<%= link_to '+', new_admins_catalogue_path, class: ' btn btn-primary mb-5', style: "font-size: 30px;" %>
 	<% @catalogues.each do |cat| %>
