--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -18,7 +18,7 @@
 	<div class="container-fluid">
 		<div class="row bottom-footer " style="border-top: 1px solid #7C978A;">
 			<div class="col col-12 "> 
-				<p class="text-center ">Noemieblumet@gmail.com</p>
+				<p class="text-center ">noemieblumet@gmail.com</p>
 			</div>
 			<div class="col col-12 text-center">
 				<p class="text-center">06.49.51.51.90</p>
