--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <!-- Footer -->
 
-<footer class="footer mt-5">
+<footer class="mt-5">
 	<div class="container-fluid mb-2">
 		<div class="row mt-2">
 			<div class="col col-4 text-dark"> 
