--- a/app/views/admins/catalogues/index.html.erb
+++ b/app/views/admins/catalogues/index.html.erb
@@ -11,7 +11,7 @@
 				
 			<% cat.pictures.each do |picture| %>
 			<div class="col col-3 mb-3">
-			<%= image_tag(picture, class:"fit") %>
+			<%= image_tag(picture, class:"fit my-scroll") %>
 			</div>
 		<% end %>
 		
