--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -7,7 +7,7 @@
                 <ul class ="nav nav-tabs border-light my-menu justify-content-center">
                     <% @category.each do |cat| %>
                          <% cat.images.sort_by{|t| - t.created_at.to_i}.first(1).each do |image| %>
-                            <li class="nav-item mt-4 ml-3 mr-2" style="" ><a class="iterator" data-toggle="tab" href=""><%= image_tag(image, class:"fit")%></a>
+                            <li class="nav-item mt-4 ml-3 mr-2 my-scroll" style="" ><a class="iterator" data-toggle="tab" href=""><%= image_tag(image, class:"fit ")%></a>
                                 <p class="menu-name"><%= cat.name %></p></li>
                         <% end %>
                     <% end %>
@@ -29,7 +29,7 @@
                                     <div class="row-flex " >
                                         <% cat.images.each do |image| %>
                                             <div class="column-flex">
-                                                <%= image_tag((image), class:" d-block  w-100 fit carrd-img-top")  %>
+                                                <%= image_tag((image), class:" d-block  w-100 fit  carrd-img-top")  %>
                                                 <div class="modal">
 
                                                 <!-- The Close Button -->
