--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,14 +1,12 @@
-
-<nav class="navbar navbar-expand-lg ">
+<nav class="navbar navbar-expand-lg navbar-dark ">
   <%= link_to "Noémie Photo", root_path, class: "navbar-brand", style: "color:white;" %>
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="true" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
 </button>
 
-    <div class="collapse navbar-collapse" id="navbarColor01">
+    <div class="collapse navbar-collapse active" id="navbarColor01">
         <ul class="navbar-nav mr-auto mx-auto">
-            <li class="nav-item active color ">
             <li class="nav-item">
                 <%= link_to "Expo", categories_path, class: "nav-link" %>
             </li>            
@@ -19,11 +17,19 @@
             <li class="nav-item">
                 <%= link_to "Cours & Ateliers", articles_path, class: "nav-link" %>
             </li>   
-
-            <li class="nav-item"> 
-                <%= link_to "À propos", static_pages_about_me_path, class: "nav-link" %>
+             
+            <li class="dropdown nav-item"> 
+                <a class="dropdown-toggle nav-link"  href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span>À propos </span>
+                </a>       
+  
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <li><%= link_to "Qui suis-je ?", static_pages_about_me_path, class: "dropdown-item" %>
+                    </li>
+                    <li><%= link_to "Actualités", '#', class: "dropdown-item" %>
+                    </li>
+                </ul>
             </li>
-
 
             <% if user_signed_in? && current_user.id_admin == true %>
                   <li class="nav-item">
@@ -37,18 +43,9 @@
                 <li class="nav-item">
                   <%= link_to "Déconnexion", destroy_user_session_path, method: :delete,  class: "nav-link" %>
                 </li>
-
-            <% else %>
-
-                <li class="nav-item">
-                    <%= link_to "Connexion", new_user_session_path, class: "nav-link" %>
-                </li>
-
             <% end %>
-
         </ul>
-
-        </div>
+    </div>
 </nav>
 
 
