--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,8 +1,26 @@
+@font-face {
+  font-family: 'Jaapokki';
+  src: url('Jaapokki-font-package-1.0/Jaapokki-font-package-1.0/subtract/web/jaapokkisubtract-regular.ttf') format('truetype'); 
+}
+
+@font-face {
+  font-family: 'Maiandra';
+  src: url('MaiandraGDRegular/MaiandraGDRegular.ttf') format('truetype');
+}
+
+.test-title {
+  font-family: 'Jaapokki';
+}
+
 nav {
 	display: grid;
 	min-height: 15vh;
-	background-color: black;
+	background-color:  #21201E;
 }   
+
+.site {
+  background-color: #E3E2E0;
+}
 
 a.nav-link {
 	color:white;
@@ -11,18 +29,47 @@ a.nav-link {
 
 
 p {
+  font-family: 'Maiandra';
 	text-align: justify;
 	line-height: 2;
 	font-size: 16px;
 }
 
+li {
+  font-family: 'Maiandra';
+}
+
+h1 {
+  font-family: 'Jaapokki';
+}
+
 h2 {
+  font-family: 'Jaapokki';
 	text-align: center;
+}
+
+h3 {
+  font-family: 'Jaapokki';
+}
+
+h4 {
+  font-family: 'Jaapokki';
+}
+
+h5 {
+  font-family: 'Jaapokki';
+}
+
+h6 {
+  font-family: 'Jaapokki';
+}
+
+.my-btn-article {
+  font-family: 'Maiandra';
 }
 
 
 .card-body {
-
 	font-size: 16px;
 }
 
@@ -54,31 +101,44 @@ h2 {
 /*LANDING PAGE*/
 
 #landing-title {
+  color: #5F5852;
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translateY(-50%);
 	transform: translateX(-50%);
-	color: white;
+  text-decoration: none;
+}
+#landing-title2 {
+  color: #5F5852;
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translateY(-50%);
+  transform: translateX(-50%);
   text-decoration: none;
 }
 
 
 .landing-image-container {
 	 
-	 height: 100%;
+   background-color: #E3E2E0;
+	 /*height: 100vh;
+   overflow: hidden;*/
 	
 }
 
 .landing-image {
 	width: 100%;
+  height: 100%;
+  object-fit: cover;
    
 }
 
-.section-landing {
+/*.section-landing {
 	height: 100vh;
 	overflow: hidden;
-}
+}*/
 
 /* Admin */
 
@@ -109,6 +169,9 @@ h2 {
 }
  /*          RESPONSIVE GALERY              */
 
+.my-border {
+  border-bottom: none !important;
+}
 
 
 .menu-name {
@@ -193,7 +256,7 @@ h2 {
   height: 100%; /* Full height */
   overflow-y: scroll !important; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.23); /* Black w/ opacity */
+  background-color: rgba(0,0,0,0.1); /* Black w/ opacity */
 
 }
 
@@ -260,6 +323,7 @@ h2 {
 @media only screen and (max-width: 700px){
   .modal-content {
     width: 100%;
+    top: 50vh;
   }
 }
 
@@ -270,25 +334,29 @@ h2 {
 html {
     position: relative;
   min-height: 100%;
+
 }
 
 body {
+  background-color: #E3E2E0;
   margin-bottom: 160px;
 }
 
 footer {
-  color: black;
+  color: white;
   display: grid;
   position: absolute;
   bottom: 0;
   /* Set the fixed height of the footer here */
   height: 80px;
   width: 100%;
-  background-color: #D6D6D6;
+  /*background-color: #D6D6D6;*/
+  background-color: #21201E;
 }
 
 .bottom-footer {
-  background-color: #D6D6D6;
+  /*background-color: #D6D6D6;*/
+  background-color: #21201E;
 }
 
 .margin-footer{
@@ -296,3 +364,16 @@ footer {
 }
 
 /* Article */
+
+.card-shadow {
+  box-shadow: 2px 2px 18px #888888;
+}
+
+
+.card-body-article {
+  background-color: rgba(200,200,200,0.2);
+}
+
+.my-btn-article {
+  border-radius: 25px !important;
+}
