--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,8 +1,10 @@
 <div class="container-fluid margin-footer">
+    
     <h1 class="text-center mt-5 mb-5"> Créer une nouvelle catégorie </h1>
-    <div class="container">
+    
+    <!-- <div class="container"> -->
         <div class="row align-items-center">
-            <div class="col col-4 text-center mx-auto">
+            <div class="col col-sm-8 col-md-8 col-lg-6 text-center mx-auto">
                 <%= form_tag url_for(action: 'create'), method: "post", class: "mt-4" do %>
                     <p class="text-center mb-5"><%= text_field_tag 'name', @category.name, class: "form-control", placeholder: "titre" %></p>
                     <p class="text-center"><%= text_field_tag 'description', @category.description, placeholder: "description" , class: "form-control" %></p>
@@ -10,5 +12,5 @@
                 <% end %>
             </div>
         </div>
-    </div>
+    <!-- </div> -->
 </div>
