--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Categories controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+@font-face {
+  font-family: 'Jaapokki';
+  src: font-url('Jaapokki-font-package-1.0/Jaapokki-font-package-1.0/subtract/web/jaapokkisubtract-regular.ttf') format('truetype'); 
+}
+
+@font-face {
+  font-family: 'Maiandra';
+  src: font-url('MaiandraGDRegular/MaiandraGDRegular.ttf') format('truetype');
+}
