--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -40,20 +40,23 @@
                                     <% cat.images.each do |image| %>
                                         <div class="column-flex">
                                             <%= image_tag((image), class:" d-block  w-100 fit  carrd-img-top")  %>
+                                        </div>
                                             <div class="modal">
 
                                                 <!-- The Close Button -->
                                                 <span class="close">&times;</span>
-
+                                               <!--  <div class="row">
+                                                <div class="col my-col-test col-4 mx-auto d-flex "> -->
                                                 <!-- Modal Content (The Image) -->
-                                                <img class="modal-content" id="" >
-
+                                                <img class="modal-content " id="" >
+                                               <!--  </div>
+                                                </div> -->
                                                 <!-- Modal Caption (Image Text) -->
                                                 <div class="captions" id="">
                                                     
                                                 </div>
                                             </div>
-                                        </div>
+                                       
                                     <% end %> 
                                 </div> 
                             </div>
