--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -1,7 +1,10 @@
 <div class="landing-image-container">
-	<div>
-		<h1> <%= link_to "Noémie Blumet", categories_path, id: "landing-title", class:" test-title"%></h1>
-		<h2> <%= link_to "Photographie", categories_path, id: "landing-title2", class:" test-title"%></h2>
+	<div class="row">
+		<%= link_to categories_path do %>
+			<%= image_tag("landing_logo.jpg", class: "logo d-block mx-auto mt-5") %>
+			<h1 class=" title mt-5" id="landing-title"> Noémie Blumet </h1>
+			<h3 class="mt-2 title" id="landing-title2"> Photographie </h3>
+		<% end %>
 	</div>
 </div>
 
