--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark ">
+<nav class="navbar navbar-expand-lg navbar-dark mb-3">
   <%= link_to root_path do %>
   <%= image_tag("landing_logo.jpg", class: "navbar-brand", style: "width: 60px; margin-left:50px;") %>
   <% end %>
