--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -1,7 +1,7 @@
 <div class="landing-image-container">
 	<div class="row">
 		<%= link_to categories_path do %>
-			<%= image_tag("landing_logo.jpg", class: "logo d-block mx-auto mt-5") %>
+			<%= image_tag("landing_logo_transparent.png", class: "logo d-block mx-auto mt-5") %>
 			<h1 class=" title mt-5" id="landing-title"> Noémie Blumet </h1>
 			<h3 class="mt-2 title" id="landing-title2"> Photographie </h3>
 		<% end %>
