--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -365,40 +365,35 @@ footer {
   border-radius: 25px !important;
 }
 
-/*ul .fit:hover  {
-  opacity: 0.7;
-
-}
-*/
 
 .overlay {
   position: absolute; 
-  bottom: -17px; 
+  bottom: 0; 
   background: rgb(255, 255, 255);
-  background: rgba(0, 0, 0, 0.55); /* Black see-through */
-  color: #f1f1f1; 
+  background: rgba(227, 226, 224, 0.90); 
+  color: #21201E; 
   width: 100%;
-  height: calc(100% - 23px);
+  height: 100%;
+  margin: 0;
   transition: .5s ease;
   opacity:0;
-  
   font-size: 20px;
-  padding: 10px;
-  padding-top: 30%;
   text-align: center;
+  padding-top: 159px;
 }
 
 
 .my-test-overlay {
-  display: block;
-  width: 200px;
-  height: 200px;
+  width: 100%;
+  max-height: 350px; 
+  height: auto;
   object-fit: cover;
 }
 
 .my-test-container {
   position: relative;
-  width: 200px;
+  max-height: 350px; 
+  object-fit: cover;
  /* max-width: 300px;*/
 }
 
