--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -11,20 +11,24 @@
 <!-- menu de l'exposition -->
 
 
-<div class="container-fluid margin-footer">
-    <div class="row ">
-        <div class="col col-12">
-            <ul class ="nav nav-tabs my-border my-menu justify-content-center">
+<div class="container margin-footer">
+    <div class="row">
+            <ul class ="nav nav-tabs">
                 <% @category.each do |cat| %>
                     <% cat.images.sort_by{|t| - t.created_at.to_i}.first(1).each do |image| %>
-                    <div class="my-test-container">
-                        <li class="nav-item mt-4 ml-3 mr-2 my-scroll" style="" ><a class="iterator" data-toggle="tab" href=""><%= image_tag(image, class:" my-test-overlay")%>
-                        <p class="menu-name overlay"><%= cat.name %></p></a></li>
-                    </div>
+                    <li class="my-test-container col-6 my-1 px-1">
+                  
+                        <a class="iterator" data-toggle="tab" href=""><%= image_tag(image, class:" my-test-overlay")%>
+                           
+                        <p class="menu-name overlay"><%= cat.name %></p>
+                           
+                            </a>
+                   
+                    </li>
+                    
                     <% end %>
                 <% end %>
             </ul>
-        </div>
     </div>
 
         <!-- expo + modals -->
