back to top and border animation done

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
 
     <%= yield %>
     
-
+    <%= render 'layouts/back_to_top' %>
 
     <%= render 'layouts/footer' unless @disable_nav %>
     
