--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -33,6 +33,10 @@ li {
   font-family: 'Maiandra';
 }
 
+li .nav-link {
+  font-weight: 300;
+}
+
 h1 {
   font-family: 'Jaapokki';
 }
@@ -103,7 +107,7 @@ h6 {
   text-align: center;
 }
 
-.landing-image-container {
+/*.landing-image-container {
   height: 100% !important;
   padding: 0;
   margin: 0;
@@ -113,7 +117,7 @@ h6 {
   align-items: center;
   background-color: #E3E2E0;	
 }
-
+*/
 
 .logo {  
   max-height: 250px;
@@ -366,6 +370,7 @@ footer {
 }
 
 
+/*  Mangific popup      */
 .overlay {
   position: absolute; 
   bottom: 0; 
@@ -377,7 +382,7 @@ footer {
   margin: 0;
   transition: .5s ease;
   opacity:0;
-  font-size: 20px;
+  font-size: 30px;
   text-align: center;
   padding-top: 159px;
 }
@@ -405,3 +410,73 @@ footer {
 .my-overlay-container {
   margin-bottom: 50px;
 }
+
+
+/* back to top*/
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 120px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  color: #21201E;
+  font-size: 60px;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+/* test animation landing*/
+
+.landing-image-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #E3E2E0; 
+  padding: 20px 82px;
+
+ }
+
+
+.landing-image-container:before  {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-top: 20px solid #5F5852;;
+  border-bottom: 20px solid #5F5852;;
+  box-sizing: border-box;
+  transform: scaleX(0);
+  transition: 1.5s;
+ }
+
+ .landing-image-container:hover:before {
+  transform: scaleX(1);
+ }
+
+ .landing-image-container:after  {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-left: 20px solid #5F5852;;
+  border-right: 20px solid #5F5852;;
+  box-sizing: border-box;
+  transform: scaleY(0);
+  transition: 1.5s;
+ }
+
+ .landing-image-container:hover:after {
+  transform: scaleY(1);
+ }
