--- a/app/views/layouts/_back_to_top.html.erb
+++ b/app/views/layouts/_back_to_top.html.erb
@@ -1,1 +1,1 @@
-<i onclick="topFunction()" class=" fas fa-arrow-up 5x" id="myBtn" title="Go to top"></i>
+<i onclick="topFunction()" class="js-btn fas fa-arrow-up 5x" id="myBtn" title="Go to top"></i>
