--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -20,7 +20,7 @@
                   
                         <a class="iterator" data-toggle="tab" href=""><%= image_tag(image, class:" my-test-overlay")%>
                            
-                        <p class="menu-name overlay"><%= cat.name %></p>
+                        <p class="overlay js--scroll"><%= cat.name %></p>
                            
                             </a>
                    
@@ -35,7 +35,7 @@
 
     <div class="row ">
         <div class="col col-12">
-            <div class="tab-content">
+            <div class="tab-content js--scroll-target">
                 <% @category.each do |cat| %>
                     <div id ="" class ="tab-pane fade image ">
                         <h1 class="mt-5 mb-5 text-center"><%=cat.name%></h1>
