--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,28 +1,26 @@
 <!-- Footer -->
 
 <footer class="mt-5">
-	<div class="container-fluid mb-2">
-		<div class="row mt-2">
-			<div class="col col-4 text-dark"> 
+
+		<div id="container-footer" class="container-fluid mb-2">
+			<div class="row mt-2">
+
+				<div class="col col-12 text-dark text-center">
+					<i class="fab fa-twitter-square"></i>
+					<i class="fab fa-facebook ml-4"></i>
+					<i class="fab fa-instagram ml-4"></i>
+					<i class="fab fa-pinterest-square ml-4"></i>
+				</div>
+
 			</div>
-			<div class="col col-4 text-dark text-center">
-				<i class="fab fa-twitter-square"></i>
-				<i class="fab fa-facebook ml-2"></i>
-				<i class="fab fa-instagram ml-2"></i>
-				<i class="fab fa-pinterest-square ml-2"></i>
-			</div>
-			<div class="col col-4 text-right pr-5">
-			</div>
-		</div>
-	</div>
-	<div class="container-fluid">
-		<div class="row bottom-footer " style="border-top: 1px solid #7C978A;">
+		</diçv>
+
+		<div class="row bottom-footer " style="border-top: 1px solid white;">
 			<div class="col col-12 "> 
-				<p class="text-center ">noemieblumet@gmail.com</p>
+				<p class="text-center mt-3 mail">noemieblumet@gmail.com</p>
 			</div>
 			<div class="col col-12 text-center">
-				<p class="text-center">06.49.51.51.90</p>
+				<p class="text-center">06.25.27.86.05</p>
 			</div>
 		</div>
-	</div>
 </footer>
