--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -14,7 +14,7 @@
 <div class="container margin-footer">
     <div class="row">
         <div class="col col-12">
-            <ul class ="nav nav-tabs my-menu justify-content-center ">
+            <ul class ="nav nav-tabs my-menu justify-content-center my-border ">
                 <% @category.each do |cat| %>
                     <% cat.images.sort_by{|t| - t.created_at.to_i}.first(1).each do |image| %>
                     <li class="nav-item mt-4 ml-3 mr-2 my-test-container">
