--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark mb-3">
   <%= link_to root_path do %>
-  <%= image_tag("logo_noir.jpg", class: "navbar-brand logo") %>
+  <%= image_tag("logo_noir.jpg", class: "navbar-brand logo-nav") %>
   <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="true" aria-label="Toggle navigation">
